--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "browserify": "^12.0.1",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "hjs": "~0.0.6",
     "morgan": "~1.6.1",
+    "react": "^0.14.1",
+    "react-dom": "^0.14.1",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "babel": "^6.0.2",
+    "babel-preset-es2015": "^6.0.12",
+    "babel-preset-react": "^6.0.12",
+    "babelify": "^7.0.1",
+    "gulp": "^3.9.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
